# catan-zero-public

./: .gitignore  AUDIT.md  CODEBASE_GUIDE.md  FLEET.md  HIGH_REGRET_DIFFERENTIAL_REVIEW_2026-07-10.md  Makefile  README.md  RL_AGENT_HANDOFF.md  catan_rules_v1.json  conftest.py  pyproject.toml
.github/workflows/: native-mcts.yml
configs/: RECOMMENDED_FLAGS.md  a1_h100_eval_fleet.example.json  a1_h100_eval_fleet_8x6.json  gpu_cluster_hosts.example.json  gpu_fleet_40.json  gpu_fleet_56.json  gpu_fleet_64.json  gpu_fleet_h100_8x6.json  production_recipes.json
configs/eval/: coherent_public_n128.schema17.json  coherent_public_n128.schema18.json  coherent_public_n128.schema19.json  coherent_public_n128.schema20.json  coherent_public_n128.schema21.json  coherent_public_n128.schema22.json
configs/experiments/: a0_gen2b_hlgauss.json  a1_b200_lr_dose_campaign.template.json  a1_parent_update_35m_b200_trunk25.rnd.schema1.json  a1_parent_update_trunk25.bindings.example.json  a1_pre_wave_contract.rnd_draft.README.md  a1_pre_wave_contract.rnd_draft.json  a1_pre_wave_contract.template.json  a1_pre_wave_contract_v4.template.json  a1_scratch_pre_v8_compat_control.json
configs/exploit_probe/: adversary_small.json  frozen_opponent_manifest_template.json  smoke.json
configs/guards/: a1_generation_n128.json  (+15 more)
docs/: 35M_TEACHER_ROOT_FIX_AND_AB3_PLAN_2026-06-28.md  35M_TEACHER_TRAINING_PLAN_2026-06-28.md  A1_CHECKPOINT_OPERATOR_CROSSOVER.md  A1_H100_DISTRIBUTED_EVAL.md  A1_HISTORICAL_CHECKPOINT_DIFFERENTIAL_REVIEW_20260710.md  A1_LINEAGE_REISSUE.md  A1_ONE_DOSE_TRAINING.md  A1_PROMOTION_TRANSACTION.md  A1_V5_DISASTER_RECOVERY.md  ACTIVE_RL_EXPERIMENTS_2026-06-27.md  AI_WORKSTREAM_GUIDE.md  AUDIT_FIXES_20260709_PLAN.md  CANONICAL_TRAINING_CLI.md  CATAN_AI_RESEARCH_SYNTHESIS.md  CATAN_AI_TECHNICAL_HANDOFF_2026-06-26.md  CATAN_ZERO_SYSTEM_PAPER_2026-07-06.md  CHECKPOINT_LAYER_DRIFT_AUDIT.md  CLUSTER_TRAINING_ARCHITECTURE.md  COLONIST_PRD.md  COLONIST_TARGET.md  ENTITY_GRAPH_B200_TEACHER_TRAINING_PLAN_2026-06-29.md  EXPLOIT_PROBE.md  FLAG_RETIREMENT_20260716.md  GEN3_WHEEL_SYNC_RUNBOOK.md  NATIVE_EVENT_HISTORY_ROLLOUT.md  OPPONENT_MIX_PRODUCTION.md  PHASE2_WINDOW_FEED.md  PPO_ARCHITECTURE_PLAN.md  PREWAVE_BOUNDARY_DIFFERENTIAL_REVIEW_20260709.md  PRODUCTION_CLI.md  PRODUCTION_NEXT_LEARNER_RECIPE.md  PRODUCTION_RL_LOOP.md  PUBLIC_AWARD_FEATURE_CONTRACT.md  REANALYZE_Q_HEAD_PROVENANCE.md  REANALYZE_VALUE_TARGETS_DESIGN_20260704.md  RL_OPERATOR_BINDING_BRIDGE.md  RND_LEADERBOARD_HARNESS.md  ROADMAP.md  SELF_PLAY.md  STAGE0.md  (+15 more)
native/: README.md
native/catanatron-rs/: .gitignore  Cargo.toml  README.md  WHEEL_SHA256SUMS  pyproject.toml
native/catanatron-rs/benches/: engine.rs
native/catanatron-rs/docs/: ai_tournament.md  optimization_roadmap.md  training_api.md
native/catanatron-rs/examples/: bench_binding_batch.py  python_smoke.py  speed.rs  torch_policy_loop.py  training_hotpaths.py
native/catanatron-rs/python/: Cargo.toml
native/catanatron-rs/python/src/: lib.rs
native/catanatron-rs/src/: lib.rs
native/catanatron-rs/tests/: game_stress.rs  native_cli.rs  smoke_mcts_bindings.py
native/gumbel_mcts_rs/: Cargo.toml  README.md  bench_rust_vs_python.py  build.sh  gumbel_mcts_rust.py  lib.rs  python_binding.rs  test_rust_vs_python.py
native/gumbel_mcts_rs/examples/: bench_native_search.rs
native/gumbel_mcts_rs/src/: lib.rs  python_binding.rs
scripts/: check_champion_noop.py  gate.sh
tests/: _fsdp_optim_worker.py  test_a0_binding_verdict.py  test_a0_gen2b_probe.py  test_a0_policy_drift.py  test_a1_active_policy_eval_matrix.py  test_a1_adaptive_n256_guard.py  test_a1_aux_pair_coordinator.py  test_a1_aux_regularization_plan.py  test_a1_aux_stage_executor.py  test_a1_b200_active_policy_campaign.py  test_a1_b200_batch_probe.py  test_a1_b200_lr_dose_campaign.py  test_a1_b200_microbatch_quality.py  test_a1_b200_stage_b_ablation_campaign.py  test_a1_b200_stage_c_learner_campaign.py  test_a1_belief_resource_arm.py  test_a1_candidate_evidence_preflight.py  test_a1_candidate_promotion_pack.py  test_a1_central_learner_completion.py  test_a1_checkpoint_operator_crossover.py  test_a1_coherent_rd_materialize.py  test_a1_coherent_target_rd_executor.py  test_a1_combined_candidate_handoff.py  test_a1_completed_ablation_receipt.py  test_a1_completion_telemetry_amendment.py  test_a1_corrected_policy_arm.py  test_a1_corrected_policy_arm_execute.py  test_a1_corrective_196k_launcher.py  test_a1_current_science_contract.py  test_a1_d6_gather_composition_arm.py  test_a1_d6_gather_composition_completion.py  test_a1_ddp_epoch_canary.py  test_a1_diagnostic_training_receipt.py  test_a1_distributed_high_regret.py  test_a1_dual_arm_adjudicator.py  test_a1_dual_arm_downstream.py  test_a1_dual_arm_train.py  test_a1_dual_learner_contract.py  test_a1_evaluation_decomposition.py  test_a1_evaluation_pool.py  (+463 more)
tools/: _a1_promotion_lock_state.py  a0_binding_verdict.py  a0_gen2b_probe.py  a0_policy_drift.py  a1_aux_pair_coordinator.py  a1_aux_pointer_commission.py  a1_aux_regularization_plan.py  a1_aux_stage_executor.py  a1_b200_active_policy_campaign.py  a1_b200_batch_probe.py  a1_b200_lr_dose_campaign.py  a1_b200_microbatch_quality.py  a1_b200_stage_b_ablation_campaign.py  a1_b200_stage_c_learner_campaign.py  a1_belief_resource_arm.py  a1_belief_resource_arm_execute.py  a1_build_post_wave_composite.py  a1_candidate_evidence_preflight.py  a1_candidate_promotion_pack.py  a1_central_learner_completion.py  a1_checkpoint_operator_crossover.py  a1_coherent_corpus_repair.py  a1_coherent_joint_learner_campaign.py  a1_coherent_rd_materialize.py  a1_combined_196k_b200.sh  a1_combined_candidate_handoff.py  a1_completion_telemetry_amendment.py  a1_corrected_policy_arm.py  a1_corrected_policy_arm_execute.py  a1_corrective_196k_b200.sh  a1_current_science_contract.py  a1_d6_gather_composition_arm.py  a1_d6_gather_composition_completion.py  a1_ddp_epoch_canary.py  a1_diagnostic_training_receipt.py  a1_distributed_high_regret.py  a1_dual_arm_adjudicator.py  a1_dual_arm_subsets.py  a1_dual_arm_train.py  a1_dual_learner_contract.py  (+270 more)
(+541 files in other folders)
