[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "catanatron-rs"
version = "0.1.4"
description = "Rust engine and Python bindings for Catanatron"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"

[tool.maturin]
manifest-path = "python/Cargo.toml"
module-name = "catanatron_rs"
