[package]
name = "gumbel-mcts"
version = "0.2.0"
edition = "2021"

[lib]
name = "gumbel_mcts"
crate-type = ["rlib"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
catanatron-rs = { path = "../catanatron-rs", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
