[package]
name = "catanatron-rs-python"
version = "0.1.12"
edition = "2024"
publish = false

[lib]
name = "catanatron_rs"
crate-type = ["cdylib"]

[dependencies]
catanatron-rs = { path = "..", default-features = false, features = ["python"] }
gumbel-mcts = { path = "../../gumbel_mcts_rs" }
pyo3 = { version = "0.27", features = ["extension-module"] }
serde_json = "1"
